--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     colors: {
                         clifford: '#da373d',
                         penguin: '#FFFBF0',
+                        jacketprice: '#FABE4C',
                     }
                 }
             }
@@ -47,6 +48,104 @@
             </div>
         </div>
     </header>
+
+    <main class="container mx-auto">
+        <header>
+            <h1 class="text-4xl font-semibold  m-5">Woman Jacket:</h1>
+            <div class="container grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 ">
+                <div class="rounded-xl shadow-lg">
+                    <!-- jacket 1  -->
+                    <div>
+                        <div class="p-5 h-45 w-45 w-45  bg-slate-100 rounded-2xl">
+                            <img src="images/jacket-1.png" alt="">
+                        </div>
+                    </div>
+                    <div class="mx-5 -my-2">
+                        <h3 class="text-4xl sm:text-lg font-semibold">Yellow Coat Jacket</h3>
+                        <p class="text-1xl">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry</p>
+                        <div class="flex  pt-2 justify-between">
+                            <h1 class="text-4xl  font-semibold text-jacketprice">$230</h1>
+                            <button
+                                class="uppercase px-6  py-3 text-white rounded-xl bg-[#A4BC46] font-semibold text-xl">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                                </svg>buy now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="p-5 shadow-lg">
+                    <!-- jacket 2  -->
+                    <div>
+                        <div class="p-5 h-45 w-45 bg-slate-100 rounded-2xl">
+                            <img src="images/jacket-2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="mx-5 -my-2 mt-2">
+                        <h3 class="text-4xl sm:text-lg font-semibold">Woman Leather Jacket </h3>
+                        <p class="text-1xl">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry</p>
+                        <div class="flex  pt-2 justify-between">
+                            <h1 class="text-3xl  font-semibold text-jacketprice">$430</h1>
+                            <button
+                                class="uppercase px-5  py-3 text-white rounded-xl bg-[#A4BC46] font-semibold text-xl">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                                </svg>buy now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="p-5 shadow-lg">
+                    <!-- jacket 3 -->
+                    <div>
+                        <div class="p-5 h-45 w-45 bg-slate-100 rounded-2xl">
+                            <img src="images/jacket-3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="mx-5 -my-2 mt-2">
+                        <h3 class="text-4xl sm:text-lg font-semibold">Ladies Jacket</h3>
+                        <p class="text-1xl">Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry</p>
+                        <div class="flex  pt-2  justify-between">
+                            <h1 class="text-3xl  font-semibold text-jacketprice">$330</h1>
+                            <button
+                                class="uppercase px-6  py-3 text-white rounded-xl bg-[#A4BC46] font-semibold text-xl">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                                </svg>buy now
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+
+    </main>
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 </html>
